--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ background: url(./images/tom1.png) no-repeat ;
 }
 
 .pressed {
-  box-shadow: 0 3px 4px 0 #DBEDF3;
+  box-shadow: 0 3px 4px 0 #c300ff;
   opacity: 0.5;
 }
 
